# logical_agent

./: .gitignore  README.md  pyproject.toml
examples/: main.py
logical_agent/: __init__.py  logical_agent.py  main.py
